@@ -28,10 +28,10 @@ do
 #	$PYTHON -OO ${THREADED_PATH}/grabnzbs_threaded.py
 #	$PHP ${NZEDB_PATH}/update_releases.php 1 false
 #	$PHP ${TEST_PATH}/fixReleaseNames.php 2 true all no
-#	$PHP ${TEST_PATH}/fixReleaseNames.php 4 true allyes
+#	$PHP ${TEST_PATH}/fixReleaseNames.php 4 true all yes
 #	$PHP ${TEST_PATH}/fixReleaseNames.php 6 true all no
 #	$PHP ${NZEDB_PATH}/nix_scripts/tmux/bin/postprocess_pre.php
-#	$PHP ${NZEDB_PATH}/decrypt_hashes.php
+#	$PHP ${NZEDB_PATH}/decrypt_hashes.php true
 #	$PHP ${DEV_PATH}/test_misc_sorter.php
 #	$PYTHON -OO ${THREADED_PATH}/postprocess_threaded.py additional
 #	$PYTHON -OO ${THREADED_PATH}/postprocess_threaded.py nfo
